--- a/show.html
+++ b/show.html
@@ -302,14 +302,18 @@
     </div>
 
     <script>
-        // URL redirect logic - handle /referees/paok -> /referees/?team=paok
+        // URL redirect logic - handle /show/paok -> /show?team=paok
         const path = window.location.pathname;
-        const segments = path.replace(/^\/+/, '').split('/').filter(s => s);
+        const hash = window.location.hash;
         
-        // Check if we have a path like /referees/paok (without query param)
-        if (segments.length >= 2 && segments[0] === 'referees' && !window.location.search) {
-            const teamSlug = segments[1].replace(/\.html$/, '');
-            window.location.href = `${window.location.origin}/referees/?team=${teamSlug}`;
+        // Check if URL ends with /show/something (team name)
+        const showMatch = path.match(/\/show\/([^\/]+)$/);
+        
+        if (showMatch && !window.location.search) {
+            const teamSlug = showMatch[1].replace(/\.html$/, '');
+            // Redirect to /show?team=teamname
+            const basePath = path.replace(/\/[^\/]+$/, ''); // Remove team name
+            window.location.href = `${basePath}?team=${teamSlug}`;
         }
 
         const githubOwner = "volleyleaguecupgr";
