--- a/show.html
+++ b/show.html
@@ -288,12 +288,12 @@
         </div>
 
         <!-- Title -->
-        <div class="title">ΣΤΟΙΧΕΙΑ ΔΙΑΙΤΗΣΙΑΣ</div>
+        <div class="title">ΔΙΑΙΤΗΤΕΣ</div>
 
         <!-- Loading State -->
         <div class="loading" id="loadingScreen">
-            <div class="spinner"></div>
-            <div class="loading-text">Φόρτωση δεδομένων...</div>
+            <!-- <div class="spinner"></div>
+            <div class="loading-text">Φόρτωση δεδομένων...</div> -->
         </div>
 
         <!-- Match Header (will be populated) -->
